<resources>
    <string name="app_name">Metro Driver</string>
    <string name="icon_description">icon</string>
    <string name="today">Today</string>
    <string name="add_travel">Add Travel</string>
    <string name="travel_number">Travel number</string>
    <string name="car_a">Car 1</string>
    <string name="car_b">Car 2</string>
    <string name="car_c">Car 3</string>
    <string name="notes">notes</string>
    <string name="edit_travel">Edit Travel</string>
    <string name="no_travels_found">No Travels Found</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancle</string>
    <string name="confirm_delete_travel_title">Delete Travel</string>
    <string name="confirm_delete_travel_message">Are you sure ? </string>

    <!--image description-->
    <string name="option_icon">option icon</string>
    <string name="backup">Backup</string>
    <string name="travels">Travels 2024/2025</string>
    <string name="vacations">Vacations</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>