<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.AddTravelFragment">

    <ImageButton
        android:id="@+id/back_image_button"
        android:layout_width="@dimen/semi_bar_icon_width"
        android:layout_height="@dimen/semi_bar_icon_height"
        android:background="@android:color/transparent"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="@id/page_title"
        app:layout_constraintEnd_toStartOf="@id/page_title"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/page_title" />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_travel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete_image_button"
        android:layout_width="@dimen/semi_bar_icon_width"
        android:layout_height="@dimen/semi_bar_icon_height"
        android:background="@android:color/transparent"
        android:src="@drawable/delete_icon"
        app:layout_constraintBottom_toBottomOf="@id/page_title"
        app:layout_constraintEnd_toStartOf="@id/save_image_button"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@id/page_title"
        app:layout_constraintTop_toTopOf="@id/page_title" />

    <ImageButton
        android:id="@+id/save_image_button"
        android:layout_width="@dimen/semi_bar_icon_width"
        android:layout_height="@dimen/semi_bar_icon_height"
        android:background="@android:color/transparent"
        android:src="@drawable/done_icon"
        app:layout_constraintBottom_toBottomOf="@id/page_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@id/page_title"
        app:layout_constraintTop_toTopOf="@id/page_title" />

    <ScrollView
        android:id="@+id/inner_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="50dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_title">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/page_title">

            <ImageView
                android:id="@+id/travel_prefix_icon_image_view"
                android:layout_width="@dimen/prefix_icon_size"
                android:layout_height="@dimen/prefix_icon_size"
                android:layout_marginStart="20dp"
                android:src="@drawable/train_icon"
                app:layout_constraintBottom_toBottomOf="@id/travel_number_text_input_layout"
                app:layout_constraintEnd_toStartOf="@id/travel_number_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/travel_number_text_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/travel_number_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/travel_prefix_icon_image_view"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/travel_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/travel_number"
                    android:inputType="number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:dividerThickness="2dp"
                app:layout_constraintTop_toBottomOf="@id/travel_prefix_icon_image_view" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unit_a_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toStartOf="@id/unit_b_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                app:layout_goneMarginTop="15dp">

                <EditText
                    android:id="@+id/unit_a_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_a"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unit_b_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="@id/unit_a_input_layout"
                app:layout_constraintEnd_toStartOf="@id/unit_c_input_layout"
                app:layout_constraintStart_toEndOf="@id/unit_a_input_layout"
                app:layout_constraintTop_toTopOf="@id/unit_a_input_layout"
                app:layout_goneMarginTop="15dp">

                <EditText
                    android:id="@+id/unit_b_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_b"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unit_c_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="@id/unit_b_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/unit_b_input_layout"
                app:layout_constraintTop_toTopOf="@id/unit_b_input_layout"
                app:layout_goneMarginTop="15dp">

                <EditText
                    android:id="@+id/unit_c_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_c"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:dividerThickness="2dp"
                app:layout_constraintTop_toBottomOf="@id/unit_a_input_layout" />

            <ImageView
                android:id="@+id/note_icon_image_view"
                android:layout_width="@dimen/prefix_icon_size"
                android:layout_height="@dimen/prefix_icon_size"
                android:layout_marginStart="20dp"
                android:src="@drawable/note_icon"
                app:layout_constraintBottom_toBottomOf="@id/note_input_layout"
                app:layout_constraintEnd_toStartOf="@id/note_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/note_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/note_icon_image_view"
                app:layout_constraintTop_toBottomOf="@id/divider2">

                <EditText
                    android:id="@+id/note_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
